# RG_Projekat

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  do-ssh.sh  m.txt  runDocker.sh
include/: Box.h  Game.h  GameLevel.h  GameObject.h  ModelRendererTorch.h  ResourceManager.h  Shader.h  SpriteRenderer.h  SpriteRendererBox.h  SpriteRendererSkyBox.h  Texture.h  data.h  stb_image.h
include/learnopengl/: camera.h  filesystem.h  mesh.h  model.h  shader.h  shader_m.h  shader_s.h
include/rg/: Error.h  Shader.h  Texture2D.h
libs/glad/: CMakeLists.txt
resources/levels/: 1.txt  2.txt  3.txt
resources/shaders/: fragmentShader.fs.glsl  fragmentShaderBox.fs.glsl  vertexShader.vs.glsl
src/: Box.cpp  Game.cpp  GameLevel.cpp  GameObject.cpp  ModelRendererTorch.cpp  ResourceManager.cpp  Shader.cpp  SpriteRenderer.cpp  SpriteRendererBox.cpp  SpriteRendererSkyBox.cpp  Texture.cpp  main.cpp
